[package]
name = "gui-demo-mine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
eframe = "0.18.0"
egui_extras = { version = "0.18.0", features = ["image"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
ureq = { version = "2.5.0", features = ["json"] }
url = "2.2.2"
image = { version = "0.24.3", default-features = false, features = ["png"] }
